--- a/package.json
+++ b/package.json
@@ -3,24 +3,52 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
+    "test:e2e": "exec playwright test",
+    "test:e2e:visual": "exec playwright test --headed",
+    "test:e2e:ui": "exec playwright test --ui-port=5555 --ui-host=0.0.0.0",
+    "test:e2e:report": "exec playwright show-report",
+    "generate:hardhat": "cross-env CONTRACT_FRAMEWORK=HARDHAT pnpm wagmi generate -w",
+    "generate:foundry": "cross-env CONTRACT_FRAMEWORK=FOUNDRY pnpm wagmi generate -w"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "@tanstack/react-query": "^5.50.1",
+    "@web3modal/wagmi": "^5.0.6",
+    "classnames": "^2.5.1",
+    "ethers": "^6.13.1",
+    "next": "14.2.4",
+    "next-intl": "^3.15.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.5",
+    "theme-change": "^2.5.0",
+    "viem": "2.x",
+    "wagmi": "^2.10.9"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "@playwright/test": "^1.45.1",
+    "@tanstack/eslint-plugin-query": "^5.50.1",
+    "@tanstack/react-query-devtools": "^5.50.1",
+    "@testing-library/react": "16.0.0",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "@wagmi/cli": "^2.1.13",
+    "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
+    "daisyui": "^4.12.10",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.4",
+    "jsdom": "24.1.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "3.4.4",
+    "typescript": "^5.5.3",
+    "vitest": "1.6.0"
   }
 }
